[workspace]
members = ["rethabi", "cli", "derive"]

[workspace.package]
version = "1.0.0"
edition = "2021"
rust-version = "1.64"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/rethabi"
repository = "https://github.com/danipopes/rethabi"
homepage = "https://github.com/danipopes/rethabi"
categories = ["cryptography::cryptocurrencies"]
keywords = ["no-std", "ethereum", "eth", "abi", "solidity"]

[workspace.dependencies]
rethabi = { version = "1.0.0", path = "rethabi", default-features = false }
