[package]
name = "rethabi-cli"
authors = [
	"Parity Technologies <admin@parity.io>",
	"Artem Vorotnikov <artem@vorotnikov.me>",
	"Nicholas Rodrigues Lordello <nlordell@gmail.com>",
]
description = "Easy to use cli for conversion of ethereum contract calls to bytecode."

version.workspace = true
edition.workspace = true
rust.version.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true

[dependencies]
rethabi.workspace = true
anyhow = "1"
hex = "0.4"
sha3 = "0.10"
structopt = "0.3"
itertools = "0.10"

[[bin]]
name = "rethabi"
path = "src/main.rs"
