[package]
name = "ethabi-derive"
description = "Easy to use conversion of ethereum contract calls to bytecode."
authors = ["Parity Technologies <admin@parity.io>"]

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true

[lib]
proc-macro = true

[dependencies]
rethabi.workspace = true

heck = "0.4"
syn = { version = "1.0.109", default-features = false, features = [
    "derive",
    "parsing",
    "printing",
    "proc-macro",
] }
quote = "1.0.23"
proc-macro2 = "1.0.51"
