[package]
name = "rethabi"
description = "Easy to use conversion of ethereum contract calls to bytecode"
authors = [
	"Parity Technologies <admin@parity.io>",
	"Artem Vorotnikov <artem@vorotnikov.me>",
	"Nicholas Rodrigues Lordello <nlordell@gmail.com>",
]

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true

[dependencies]
hex = { version = "0.4", default-features = false, features = ["alloc"] }
serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }
serde_json = { version = "1.0", optional = true }
sha3 = { version = "0.10", default-features = false }
ethereum-types = { version = "0.14.1", default-features = false }
thiserror = { version = "1", optional = true }
uint = { version = "0.9.5", default-features = false, optional = true }
regex = { version = "1.7.1", optional = true }
once_cell = { version = "1.17.1", optional = true }

[dev-dependencies]
ethabi-derive = { path = "../derive" }
hex-literal = "0.3"
paste = "1"
serde_json = "1.0"

[features]
default = ["std", "full-serde", "rlp"]
std = ["hex/std", "sha3/std", "ethereum-types/std", "thiserror", "uint?/std", "serde?/std"]

serde = ["dep:serde", "ethereum-types/serialize", "uint"]

# To enable custom `Reader`/`Tokenizer` and `serde` features support
full-serde = ["std", "serde", "serde_json", "regex", "once_cell"]

rlp = ["ethereum-types/rlp"]

parity-codec = ["ethereum-types/codec"]
