[package]
name = "rethabi"
description = "Easy to use conversion of ethereum contract calls to bytecode"
authors = [
    "Parity Technologies <admin@parity.io>",
    "Artem Vorotnikov <artem@vorotnikov.me>",
    "Nicholas Rodrigues Lordello <nlordell@gmail.com>",
]
readme = "../README"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true

[dependencies]
revm-primitives = { version = "1.0.0", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
sha3 = { version = "0.10", default-features = false }

# std
thiserror = { version = "1", optional = true }

# serde
serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }

# full-serde
serde_json = { version = "1.0", optional = true }
regex = { version = "1.7.1", optional = true }
once_cell = { version = "1.17.1", optional = true }

[dev-dependencies]
rethabi-derive = { path = "../derive" }
hex-literal = "0.3"
paste = "1"
serde_json = "1.0"

[features]
default = ["std"]
std = ["revm-primitives/std", "hex/std", "sha3/std", "thiserror", "serde?/std"]

serde = ["dep:serde", "revm-primitives/serde"]

# To enable custom `Reader`/`Tokenizer` and `serde` features support
full-serde = ["std", "serde", "serde_json", "regex", "once_cell"]
